after changing many files

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\riyadn\\.netbeans\\7.1.1\\tomcat60.properties
-j2ee.server.home=D:/apache-tomcat-6.0.37
-j2ee.server.instance=tomcat60:home=D:\\apache-tomcat-6.0.37
+deploy.ant.properties.file=C:\\Users\\riyadn\\AppData\\Roaming\\NetBeans\\7.3\\tomcat60.properties
+j2ee.server.home=C:/blazeds/tomcat
+j2ee.server.instance=tomcat60:home=C:\\blazeds\\tomcat\\
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\riyadn\\.netbeans\\7.1.1\\build.properties
+user.properties.file=C:\\Users\\riyadn\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
