--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,47 +25,34 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.bcmail-jdk15-140.jar=web/WEB-INF/bcmail-jdk15-140.jar
-file.reference.bcprov-jdk16-140.jar=web/WEB-INF/bcprov-jdk16-140.jar
-file.reference.commons-codec-1.5.jar=web/WEB-INF/commons-codec-1.5.jar
 file.reference.commons-fileupload-1.3.jar=web/WEB-INF/commons-fileupload-1.3.jar
 file.reference.commons-io-1.3.1.jar=web/WEB-INF/commons-io-1.3.1.jar
+file.reference.commons-lang3-3.1.jar=web/WEB-INF/commons-lang3-3.1.jar
 file.reference.commons-logging-1.1.1.jar=web/WEB-INF/commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.jar=web/WEB-INF/commons-logging-1.1.jar
-file.reference.docx4j-2.8.1.jar=web/WEB-INF/docx4j-2.8.1.jar
-file.reference.dom4j-1.6.1.jar=web/WEB-INF/dom4j-1.6.1.jar
-file.reference.icu4j-3.8.jar=web/WEB-INF/icu4j-3.8.jar
-file.reference.java2word-3.3.jar=web/WEB-INF/java2word-3.3.jar
-file.reference.log4j-1.2.13.jar=web/WEB-INF/log4j-1.2.13.jar
 includes=**
 j2ee.compile.on.save=true
+j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/bin/tomcat-juli.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/bin/tomcat-juli.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcmail-jdk15-140.jar}:\
-    ${file.reference.bcprov-jdk16-140.jar}:\
-    ${file.reference.commons-codec-1.5.jar}:\
-    ${file.reference.commons-io-1.3.1.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
-    ${file.reference.docx4j-2.8.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.icu4j-3.8.jar}:\
-    ${file.reference.java2word-3.3.jar}:\
-    ${file.reference.log4j-1.2.13.jar}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
-    ${reference.PDFtoHTML.jar}
+    ${reference.Pdf2Html_pdfbox1_8_2.jar}:\
+    ${file.reference.commons-io-1.3.1.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -86,8 +73,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.PDFtoHTML=../PDFtoHTML
-reference.PDFtoHTML.jar=${project.PDFtoHTML}/dist/PDFtoHTML.jar
+project.Pdf2Html_pdfbox1_8_2=../Pdf2Html_pdfbox1.8.2
+reference.Pdf2Html_pdfbox1_8_2.jar=${project.Pdf2Html_pdfbox1_8_2}/dist/Pdf2Html_pdfbox1.8.2.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
