--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,7 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.Pdf2Html_pdfbox1_8_2=../Pdf2Html_pdfbox1.8.2
+project.Pdf2Html_pdfbox1_8_2=../Pdf2html_pdfbox_1.8.2
 reference.Pdf2Html_pdfbox1_8_2.jar=${project.Pdf2Html_pdfbox1_8_2}/dist/Pdf2Html_pdfbox1.8.2.jar
 resource.dir=setup
 run.test.classpath=\
