trying to apply template for newsfile

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\riyadn\\AppData\\Roaming\\NetBeans\\7.3\\tomcat60.properties
+deploy.ant.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\7.4\\tomcat60.properties
 j2ee.server.home=C:/blazeds/tomcat
-j2ee.server.instance=tomcat60:home=C:\\blazeds\\tomcat\\
+j2ee.server.instance=tomcat60:home=C:\\blazeds\\tomcat
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\riyadn\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+selected.browser=SL[/Browsers/FirefoxBrowser
+user.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
