--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.jar}:\
     ${reference.Pdf2Html_pdfbox1_8_2.jar}:\
     ${file.reference.commons-io-1.3.1.jar}:\
-    ${file.reference.commons-lang3-3.1.jar}
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${reference.htmltemplating.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -73,7 +74,9 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.htmltemplating=../htmltemplating
 project.Pdf2Html_pdfbox1_8_2=../Pdf2html_pdfbox_1.8.2
+reference.htmltemplating.jar=${project.htmltemplating}/dist/htmltemplating.jar
 reference.Pdf2Html_pdfbox1_8_2.jar=${project.Pdf2Html_pdfbox1_8_2}/dist/Pdf2Html_pdfbox1.8.2.jar
 resource.dir=setup
 run.test.classpath=\
