--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,11 +25,23 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.commons-fileupload-1.2.1.jar=src/java/lib/commons-fileupload-1.2.1.jar
 file.reference.commons-fileupload-1.3.jar=web/WEB-INF/commons-fileupload-1.3.jar
 file.reference.commons-io-1.3.1.jar=web/WEB-INF/commons-io-1.3.1.jar
+file.reference.commons-io-1.4.jar=src/java/lib/commons-io-1.4.jar
 file.reference.commons-lang3-3.1.jar=web/WEB-INF/commons-lang3-3.1.jar
+file.reference.commons-lang3-3.1.jar-1=src/java/lib/commons-lang3-3.1.jar
 file.reference.commons-logging-1.1.1.jar=web/WEB-INF/commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.jar=web/WEB-INF/commons-logging-1.1.jar
+file.reference.htmllexer.jar=src/java/lib/htmllexer.jar
+file.reference.htmlparser.jar=src/java/lib/htmlparser.jar
+file.reference.im4java-1.1.0.jar=src/java/lib/im4java-1.1.0.jar
+file.reference.resolver.jar=src/java/lib/resolver.jar
+file.reference.sac.jar=src/java/lib/sac.jar
+file.reference.serializer.jar=src/java/lib/serializer.jar
+file.reference.xercesImpl.jar=src/java/lib/xercesImpl.jar
+file.reference.xercesSamples.jar=src/java/lib/xercesSamples.jar
+file.reference.xml-apis.jar=src/java/lib/xml-apis.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +57,18 @@ javac.classpath=\
     ${reference.Pdf2Html_pdfbox1_8_2.jar}:\
     ${file.reference.commons-io-1.3.1.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
-    ${reference.htmltemplating.jar}
+    ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.commons-io-1.4.jar}:\
+    ${file.reference.commons-lang3-3.1.jar-1}:\
+    ${file.reference.htmllexer.jar}:\
+    ${file.reference.htmlparser.jar}:\
+    ${file.reference.im4java-1.1.0.jar}:\
+    ${file.reference.resolver.jar}:\
+    ${file.reference.sac.jar}:\
+    ${file.reference.serializer.jar}:\
+    ${file.reference.xercesImpl.jar}:\
+    ${file.reference.xercesSamples.jar}:\
+    ${file.reference.xml-apis.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -74,9 +97,7 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.htmltemplating=../htmltemplating
 project.Pdf2Html_pdfbox1_8_2=../Pdf2html_pdfbox_1.8.2
-reference.htmltemplating.jar=${project.htmltemplating}/dist/htmltemplating.jar
 reference.Pdf2Html_pdfbox1_8_2.jar=${project.Pdf2Html_pdfbox1_8_2}/dist/Pdf2Html_pdfbox1.8.2.jar
 resource.dir=setup
 run.test.classpath=\
