--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\7.4\\tomcat60.properties
-j2ee.server.home=C:/blazeds/tomcat
-j2ee.server.instance=tomcat60:home=C:\\blazeds\\tomcat
+deploy.ant.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv31718877792.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=F:/Installed Application/glassfish-4.0/glassfish/domains/domain1
+j2ee.server.home=F:/Installed Application/glassfish-4.0/glassfish
+j2ee.server.instance=[F:\\Installed Application\\glassfish-4.0\\glassfish;F:\\Installed Application\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=F:/Installed Application/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Zia\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
